<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
        <LinearLayout
            android:id="@+id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start" />

        <TextView
            android:id="@+id/time_text"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00"
            android:textSize="16sp" />

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textSize="16sp" />

                <Spinner
                    android:id="@+id/language_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />


        </LinearLayout>

                <GridView
                    android:id="@+id/grv_number"
                    android:layout_below="@+id/header_layout"
                    android:layout_marginTop="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnWidth="90dp"
                    android:gravity="center"
                    android:horizontalSpacing="0dp"
                    android:numColumns="4"
                    android:verticalSpacing="0dp"
                    android:scrollbars="vertical"
                    android:smoothScrollbar="true"
                    />
</RelativeLayout>